RESOLVED FIXED 282745
[RISCV] no viable conversion from 'TempRegister<(TempRegisterType)'\x00'>' to 'RegisterID'
https://bugs.webkit.org/show_bug.cgi?id=282745
Summary [RISCV] no viable conversion from 'TempRegister<(TempRegisterType)'\x00'>' to...
MingZhu Yan
Reported 2024-11-07 00:56:31 PST
Here is the error I encountered while compiling on sipeed licheepi4a (a riscv64gc board) 1: ```txt /home/debian/repo/WiebKit/Source/JavasoriptCore/assenbler/MacroAssenberRISCV64.h:662:36: error: no viable conversion from 'TempRegister<(TempRegisterType)'\x00'>' to 'RegisterID' (aka 'JSC::RISCVé64Registers::RegisterID') m_assembler.sllwInsn(dest, temp, shiftAmount); ``` 2: ```txt In file included from /home/debian/repo/WebKit/Source/JavaScriptCore/jit/GPRInfo.h:28: In file included from /home/debian/repo/WebKit/Source/JavaScriptCore/assembler/MacroAssembler.h:81: /home/debian/repo/WebKit/Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.h:661:9: error: no matching member function for call to 'move' move (imm, temp); ``` I think we should call TempRegister.data() here ```txt template<TempRegisterType... RegisterTypes> struct TempRegister { RegisterID data() { static_assert(((RegisterTypes == Data) || ...)); return dataTempRegister; } ```
Attachments
MingZhu Yan
Comment 1 2024-11-07 23:02:43 PST
Radar WebKit Bug Importer
Comment 2 2024-11-14 00:57:14 PST
EWS
Comment 3 2024-11-14 08:19:23 PST
Committed 286593@main (47fe98fc3982): <https://commits.webkit.org/286593@main> Reviewed commits have been landed. Closing PR #36377 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.