[JSC][RISCV] Fix no viable conversion from 'TempRegister<(TempRegisterType)'\x00'>' to 'RegisterID' bugs.webkit.org/show_bug.cgi?id=282745

Reviewed by Justin Michaud.

* Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.h:
(JSC::MacroAssemblerRISCV64::lshift32):

Canonical link: https://commits.webkit.org/286593@main